# error-codes

./: INSTALL.md  NEWS  README.md  meson.build
.github/workflows/: ci-opensuse.yml
man/: custom-man.xsl  error-codes.1.xml  meson.build
scripts/: gen_econf_data_h.sh  gen_errno_data_h.sh  gen_pam_data_h.sh
src/: error-codes.c
